--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wyświetlanie zawartości pliku</title>
+    <title>Wyświetlanie zawartości pliku, pozdrawiam pana policjanta</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,6 +35,6 @@
                 console.error('Błąd:', error);
             });
     </script>
- jebanie policji
 </body>
+    jebanie policji zawcze na propsie
 </html>
