--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wyświetlanie zawartości pliku, pozdrawiam pana policjanta</title>
+    <title>Wyświetlanie zawartości pliku</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -36,5 +36,4 @@
             });
     </script>
 </body>
-    jebanie policji zawcze na propsie
 </html>
