--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
     <script>
         // Wczytanie pliku z repozytorium GitHub
-        const fileUrl = 'https://github.com/WojtekCracker/files/blob/main/user_credentials.txt'; // Zaktualizuj ścieżkę
+        const fileUrl = 'https://raw.githubusercontent.com/WojtekCracker/files/main/user_credentials.txt
+'; // Zaktualizuj ścieżkę
 
         // Funkcja do pobierania zawartości pliku
         fetch(fileUrl)
