--- a/index.html
+++ b/index.html
@@ -9,32 +9,17 @@
             font-family: Arial, sans-serif;
             margin: 20px;
         }
-        pre {
-            white-space: pre-wrap;
-            word-wrap: break-word;
+        iframe {
+            width: 100%;
+            height: 500px;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
 <body>
 
     <h1>Zawartość pliku:</h1>
-    <pre id="file-content">Ładowanie...</pre>
+    <iframe src="https://raw.githubusercontent.com/WojtekCracker/files/main/user_credentials.txt"></iframe>
 
-    <script>
-        // Wczytanie pliku z repozytorium GitHub
-        const fileUrl = 'https://raw.githubusercontent.com/WojtekCracker/files/main/user_credentials.txt
-'; // Zaktualizuj ścieżkę
-
-        // Funkcja do pobierania zawartości pliku
-        fetch(fileUrl)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('file-content').textContent = data;
-            })
-            .catch(error => {
-                document.getElementById('file-content').textContent = 'Wystąpił błąd przy wczytywaniu pliku.';
-                console.error('Błąd:', error);
-            });
-    </script>
 </body>
 </html>
